--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <meta name="author" content="Owl Fix It Repair"/>
     <meta property="og:image" content="https://picjumbo.imgix.net/HNCK1202-2.jpg?q=40&w=1650&sharp=30"/>
     <meta property="og:url" content="http://www.owlfixitrepair.com" />
-    <meta property="og:title" content="Owl Fix IT" />
+    <meta property="og:title" content="Owl Fix IT Repair" />
     <meta name="geo.region" content="US-PA" />
     <meta name="geo.placename" content="Philadelphia" />
     <meta name="geo.position" content="39.980825;-75.149579" />
     <meta name="ICBM" content="39.980825, -75.149579" />
-
+    
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -96,9 +96,6 @@ s0.parentNode.insertBefore(s1,s0);
                     <li>
                         <a class="page-scroll" href="#repair">Schedule Repair</a>
                     </li>
-                    <!--<li>
-                        <a class="page-scroll" href="#gallery">Gallery</a>
-                    </li>-->
                     <li>
                         <a class="page-scroll" href="#reviews">Reviews</a>
                     </li>
@@ -116,7 +113,7 @@ s0.parentNode.insertBefore(s1,s0);
         <div class="header-content">
             <div class="header-content-inner">
 
-                <h1 class="text text-primary vintage-retro sr-intro">Owl Fix IT</h1>
+                <h1 class="text text-primary vintage-retro sr-intro">Owl Fix IT Repair</h1>
                 <hr class ="sr-intro">
                 <p style="font-family:Arial;" class ="text sr-intro">Repairs By Students, For Students</p>
                 <a href="#services" class="btn btn-primary btn-xl page-scroll sr-intro btn-margin-head">Services</a>
@@ -179,11 +176,12 @@ s0.parentNode.insertBefore(s1,s0);
     <section class="some-padding" id="repair">
         <div class ="container text-center">
             <h2 class="section-heading text-center">Schedule Repair</h2>
+
             <hr>
             <iframe src="https://app.acuityscheduling.com/schedule.php?owner=12478024" width="90%" height="300" frameBorder="0"></iframe>
             <script src="https://d3gxy7nm8y4yjr.cloudfront.net/js/embed.js" type="text/javascript"></script>
         </div>  
-        <p style="font-family:Arial;" class="text-center"><strong>By scheduling a repair, you have read and agreed to the <a data-toggle="modal" data-target="#warranty">Warranty</a> and <a data-toggle="modal" data-target="#tos">Terms of Service</a> agreements.</strong></p>
+        <p style="font-family:Arial;" class="text-center"><strong>By scheduling a repair via the scheduler or chat (on owlfixitrepair.com or facebook), you agree that you have read and agreed to the <a data-toggle="modal" data-target="#warranty">Warranty</a> and <a data-toggle="modal" data-target="#tos">Terms of Service</a> agreements.</strong></p>
     </section>
 
 
@@ -314,7 +312,7 @@ s0.parentNode.insertBefore(s1,s0);
                 <blockquote>
                   <div class="row">
                     <div class="col-sm-3 text-center">
-                      <img class="img-circle" src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/10399625_1305769612773573_5566846971317132264_n.jpg?oh=7e073475c0213e96a4d2461e24f57785&oe=57C6AC2C" style="width: 100px;height:100px;" alt="Keshav's Repair Experience">
+                      <img class="img-circle" src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/10399625_1305769612773573_5566846971317132264_n.jpg?oh=2eaf0188bab4e4651cbae47bf5e07a4b&oe=583D532C" style="width: 100px;height:100px;" alt="Keshav's Repair Experience">
                   </div>
                   <div class="col-sm-9">
                       <p style="font-family:Arial;">Ryan was awesome. Not only was he patient but when an issue arose with the screen he installed, he took care of it immediately on the spot without me having to wait. I would easily recommend these guys over anyone else.</p>
@@ -328,11 +326,11 @@ s0.parentNode.insertBefore(s1,s0);
         <blockquote>
           <div class="row">
             <div class="col-sm-3 text-center">
-              <img class="img-circle" src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/10930157_10203439868257973_2139891605360792632_n.jpg?oh=493963cb5f2769cac5d07389f5eced54&oe=57CBE6B3" style="width: 100px;height:100px;" alt="Ryan's Repair Experience">
+              <img class="img-circle" src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-1/c142.74.421.421/s160x160/12791093_1286965071320982_6629843905591467828_n.jpg?oh=86cbf9426bff40474b6571f48b7c1b58&oe=583D8A2C" style="width: 100px;height:100px;" alt="Ryan's Repair Experience">
           </div>
           <div class="col-sm-9">
-              <p style="font-family:Arial;">Got my charging port and headphone jack replaced only a couple days after I first contacted Owl Fix It. Really fast and reliable service, and Ryan's a super friendly dude.</p>
-              <small class = "text-faded">Ryan Gibbons</small>
+              <p style="font-family:Arial;">Fixed my phone professionally in 10 minutes, now it works perfectly again. Couldn't possibly have gone any better, do not hesitate to contact him for any repair you needs. You will definitely be satisfied.</p>
+              <small class = "text-faded">Marcus Y.</small>
           </div>
       </div>
   </blockquote>
@@ -342,7 +340,7 @@ s0.parentNode.insertBefore(s1,s0);
     <blockquote>
       <div class="row">
         <div class="col-sm-3 text-center">
-          <img class="img-circle" src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/13343013_230503900675372_8473081186740765404_n.jpg?oh=4355438b7c365a52c027be6aef5902d1&oe=57CFDFC8" style="width: 100px;height:100px;" alt="Vince's Repair Experience">
+          <img class="img-circle" src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/14102374_280219212370507_7280528561832980716_n.jpg?oh=a9b6a8a18ad2504781a017575445ae64&oe=587A3383" style="width: 100px;height:100px;" alt="Vince's Repair Experience">
       </div>
       <div class="col-sm-9">
           <p style="font-family:Arial;">Great communication, detailed knowledge of how your phone works, and quick repair time. What more could you ask for? I would definitely come back if I break my phone again.</p>
@@ -483,6 +481,10 @@ s0.parentNode.insertBefore(s1,s0);
                             <p><strong>What will we do to correct problems?</strong></p>
 
                             <p>Owl Fix IT will either repair the Product at no charge, using new or refurbished replacement parts.</p>
+
+                            <p>
+                                If a problem with the repair arises and the direct cause can not be addressed or fixed, a full refund will be granted along with suggestions on what to do.
+                            </p>
 
                             <p><strong>How long does the coverage last?</strong></p>
 
